RESOLVED FIXED 113619
FTL should force LLVM to use our own JIT memory allocator, and we shouldn't have to keep around an LLVMExecutionEngineRef to keep code alive
https://bugs.webkit.org/show_bug.cgi?id=113619
Summary FTL should force LLVM to use our own JIT memory allocator, and we shouldn't h...
Filip Pizlo
Reported 2013-03-29 16:08:20 PDT
FTL should force LLVM to use our own JIT memory allocator.
Attachments
LLVM patch to expose MCJITMemoryManager callbacks (14.91 KB, patch)
2013-05-15 15:08 PDT, Filip Pizlo
no flags
the patch (11.29 KB, patch)
2013-05-15 15:09 PDT, Filip Pizlo
ggaren: review+
LLVM patch to expose MCJITMemoryManager callbacks (19.48 KB, patch)
2013-05-15 15:12 PDT, Filip Pizlo
no flags
LLVM patch to expose MCJITMemoryManager callbacks (26.93 KB, patch)
2013-05-15 18:52 PDT, Filip Pizlo
no flags
new patch for LLVM (31.53 KB, patch)
2013-05-18 09:11 PDT, Filip Pizlo
no flags
the patch (11.15 KB, patch)
2013-05-18 09:12 PDT, Filip Pizlo
no flags
Filip Pizlo
Comment 1 2013-05-15 15:08:37 PDT
Created attachment 201888 [details] LLVM patch to expose MCJITMemoryManager callbacks
Filip Pizlo
Comment 2 2013-05-15 15:09:59 PDT
Created attachment 201889 [details] the patch
Filip Pizlo
Comment 3 2013-05-15 15:12:00 PDT
Created attachment 201890 [details] LLVM patch to expose MCJITMemoryManager callbacks
Geoffrey Garen
Comment 4 2013-05-15 15:17:01 PDT
Comment on attachment 201889 [details] the patch View in context: https://bugs.webkit.org/attachment.cgi?id=201889&action=review r=me > Source/JavaScriptCore/ftl/FTLCompile.cpp:43 > +static uint8_t *allocateCodeSection( Move the star, please. And below. > Source/JavaScriptCore/ftl/FTLCompile.cpp:54 > + state.graph.m_vm, size, state.graph.m_codeBlock, JITCompilationMustSucceed); Maybe link to the bug here about must succeed.
Filip Pizlo
Comment 5 2013-05-15 18:52:31 PDT
Created attachment 201909 [details] LLVM patch to expose MCJITMemoryManager callbacks
Filip Pizlo
Comment 6 2013-05-18 09:11:19 PDT
Created attachment 202207 [details] new patch for LLVM
Filip Pizlo
Comment 7 2013-05-18 09:12:19 PDT
Created attachment 202208 [details] the patch
Filip Pizlo
Comment 8 2013-05-22 10:01:09 PDT
Note You need to log in before you can comment on or make changes to this bug.