Source/JavaScriptCore/ftl/FTLState.cpp
@@ -40,7 +40,6 @@ State::State(Graph& graph)
     , module(0)
     , function(0)
     , jitCode(adoptRef(new JITCode()))
-    , engine(0)
     , generatedFunction(0)
 {
     finalizer = new JITFinalizer(graph.m_plan);
